# saas

./: README.md  compose.yaml
backend/: .gitignore  Cargo.toml
backend/prisma/: schema.prisma
backend/src/: error.rs  firebase.rs  firebase_auth.rs  handlers.rs  main.rs  schema.rs  services.rs
backend/src/firebase/: auth.rs
backend/src/handlers/: graphiql_handler.rs  graphql_handler.rs
backend/src/prisma/: client.rs
backend/src/schema/: guard.rs
backend/src/schema/project/: mutation.rs  query.rs  types.rs
backend/src/schema/user/: mutation.rs  query.rs  types.rs
backend/src/services/: project.rs  user.rs
frontend/: .gitignore  .prettierignore  .prettierrc.json  .yarnrc.yml  codegen.ts  jest.config.js  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: layout.tsx  page.tsx  urql-provider.tsx
frontend/app/(auth)/signin/: page.tsx
frontend/app/(protected)/: layout.tsx  page.tsx
frontend/app/(protected)/p/: page.tsx
frontend/app/api/healthz/: route.ts
frontend/app/client/: page.tsx
frontend/app/viewer/: page.tsx
frontend/components/providers/: session-provider.tsx  urql-provider.tsx
frontend/gql/: gql.ts  graphql.ts
frontend/graphql/: client.ts
frontend/graphql-client/: auth.ts  client.ts  serverUrqlClient.ts
frontend/graphql-client/client/: index.ts
frontend/graphql-client/server/: index.ts
frontend/libs/firebase/: client.ts
frontend/libs/logging/: logger.ts
frontend/pages/api/: [...path].ts
frontend/types/: next-auth.d.ts  nodejs.d.ts
frontend/utils/: endpoint.ts
(+4 files in other folders)
