[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["prisma-cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-graphql = { version = "6.0.1", features = ["log", "apollo_persisted_queries", "dataloader", "chrono", "tracing", "graphiql" ] }
async-graphql-axum = "6.0.1"
axum = "0.6.20"
chrono = "0.4.26"
dotenv = "0.15.0"
serde = "1.0.183"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = ["postgresql", "migrations"] }
async-trait = "0.1.73"
axum-auth = "0.4.0"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.20", features = ["json"] }
openssl = { version = "0.10.57", features = ["vendored"] }